# asciicam

./: .gitignore  CMakeLists.txt  README.md  build.sh  test_sources.sh
android/: build.gradle  build_android.sh  build_manual.sh  gradlew  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  android_camera.cpp  android_camera.h  android_main.cpp  android_renderer.cpp  android_renderer.h  gst_android_init.c  gstreamer_rtsp_server.cpp  gstreamer_rtsp_server.h
android/app/src/main/java/com/example/img2ascii/: MainActivity.java
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml
prototype/: img2ascii.pde  sketch.properties
src/: ascii_converter.cpp  ascii_converter.h  gl_text_renderer.cpp  gl_text_renderer.h  gl_window.cpp  gl_window.h  gstreamer_pipeline.cpp  gstreamer_pipeline.h  main.cpp
